API, Python and Database(MySQL)

--- a/templates/rate_book.html
+++ b/templates/rate_book.html
@@ -9,11 +9,11 @@
     <form method="POST">
         <div class="mb-3">
             <label for="score" class="form-label">Your score <span class="text-muted">(number between 1 and 5)</span></label>
-            <input type="number" class="form-control" id="score" value="{{ current_score }}" min="1" max="5" oninput="this.value = this.value.replace(/[^1-5]/g, '').slice(-1);">
+            <input type="number" class="form-control" name="score" id="score" value="{{ current_score }}" min="1" max="5" oninput="this.value = this.value.replace(/[^1-5]/g, '').slice(-1);">
         </div>
         <div class="mb-3">
             <label for="review" class="form-label">Your review</label>
-            <textarea class="form-control" id="review" rows="2" oninput="this.value = this.value.slice(0, 255);">{{ current_review }}</textarea>
+            <textarea class="form-control" name="review" id="review" rows="2" oninput="this.value = this.value.slice(0, 255);">{{ current_review }}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit rating</button>
         <a role="button" href="/books/{{ book_details[0] }}" class="btn btn-pink ms-1">Cancel</a>
